DASH-117 DASH-116 Fixed some SQL syntax for Oracle and HSQLDB. Added support to post sakai events and/or save info in dash_event table for user activity in dashboard.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313055 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -35,13 +35,21 @@ insert into dash_config (id, property_name, property_value) values (dash_config_
 insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
 insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
 insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_WEEKS_TO_HORIZON', 4); \
-insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_MOTD_MODE', 1) 
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_MOTD_MODE', 1); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_LOG_MODE_FOR_NAVIGATION_EVENTS', 2); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_LOG_MODE_FOR_ITEM_DETAIL_EVENTS', 2); \
+insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, 'PROP_LOG_MODE_FOR_PREFERENCE_EVENTS', 2) 
 
 create.Context.table = create table dash_context \
 ( id number not null primary key, context_id varchar2(255) not null, \
 context_url varchar2(1024) not null, context_title varchar2(255) not null ); \
 create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_context_idx on dash_context (context_id)
+
+create.EventLog.table = create table dash_event (event_id number, event_date timestamp with timezone, event varchar2 (32), \
+ref varchar2 (255), context varchar2 (255), session_id varchar2 (163), event_code varchar2 (1), primary key (event_id)); \
+create unique index dash_event_index on dash_event (event_id asc); \
+create sequence dash_event_seq start with 1 increment by 1 nomaxvalue
 
 create.NewsItem.table = create table dash_news_item ( id number not null primary key, \
 news_time timestamp(0) not null, news_time_label_key varchar2(40), title varchar2(255) not null, \
@@ -135,6 +143,8 @@ values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
 insert.Config = insert into dash_config (id, property_name, property_value) values (dash_config_seq.nextval, ?, ?)
 
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?)
+
+insert.EventLog = insert into dash_event (event_id, event_date, event, ref, context, session_id, event_code) values (dash_event_seq.nextval, ?, ?, ?, ?, ?, ?)
 
 insert.NewsItem = insert into dash_news_item (id, news_time, title, news_time_label_key, entity_ref, subtype, entity_type, context_id, grouping_id) \
 values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?, ?)
