--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -29,11 +29,18 @@ insert into dash_config (property_name, property_value) values ('PROP_REMOVE_ITE
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
 insert into dash_config (property_name, property_value) values ('PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
 insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4); \
-insert into dash_config (property_name, property_value) values ('PROP_MOTD_MODE', 1)
+insert into dash_config (property_name, property_value) values ('PROP_MOTD_MODE', 1); \
+insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_NAVIGATION_EVENTS', 2); \
+insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_ITEM_DETAIL_EVENTS', 2); \
+insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_PREFERENCE_EVENTS', 2)
+
 
 create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
 context_url varchar(1024) not null, context_title varchar(255) not null, primary key (id) ); \
 create unique index dash_context_idx on dash_context (context_id)
+
+create.EventLog.table = create table dash_event (event_id bigint auto_increment, event_date timestamp, event varchar (32), \
+ref varchar (255), context varchar (255), session_id varchar (163), event_code varchar (1), primary key (event_id))
 
 create.NewsItem.table = create table if not exists dash_news_item ( id bigint not null auto_increment, news_time datetime not null, \
 news_time_label_key varchar(40) character set ascii, title varchar(255) not null, \
@@ -120,6 +127,8 @@ insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, contex
 insert.Config = insert into dash_config (property_name, property_value) values (?, ?)
 
 insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?)
+
+insert.EventLog = insert into dash_event (event_date, event, ref, context, session_id, event_code) values (?, ?, ?, ?, ?, ?)
 
 insert.NewsItem = insert into dash_news_item (news_time, title, news_time_label_key, entity_ref, subtype, entity_type, context_id, grouping_id) \
 values (?, ?, ?, ?, ?, ?, ?, ?)
