DASH-64 use util class for the time and title update
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313056 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -116,5 +116,5 @@ dash.ajax.show.success = Item is no longer hidden
 dash.ajax.star.success = Item is now starred
 dash.ajax.unstar.success = Item is no longer starred
 
-updated = - updated
+updated = updated
 
