--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -27,12 +27,14 @@ insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_IT
 insert into dash_config (property_name, property_value) values ('PROP_DEFAULT_ITEMS_IN_GROUP', 2); \
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_ITEMS_AFTER_WEEKS', 52); \
 insert into dash_config (property_name, property_value) values ('PROP_REMOVE_STARRED_ITEMS_AFTER_WEEKS', 26); \
+insert into dash_config (property_name, property_value) values ('PROP_REMOVE_HIDDEN_ITEMS_AFTER_WEEKS', 4); \
 insert into dash_config (property_name, property_value) values ('PROP_DAYS_BETWEEN_HORIZ0N_UPDATES', 1); \
 insert into dash_config (property_name, property_value) values ('PROP_WEEKS_TO_HORIZON', 4); \
 insert into dash_config (property_name, property_value) values ('PROP_MOTD_MODE', 1); \
 insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_NAVIGATION_EVENTS', 2); \
 insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_ITEM_DETAIL_EVENTS', 2); \
-insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_PREFERENCE_EVENTS', 2)
+insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_PREFERENCE_EVENTS', 2); \
+insert into dash_config (property_name, property_value) values ('PROP_LOG_MODE_FOR_DASH_NAV_EVENTS', 2) 
 
 
 create.Context.table = create table if not exists dash_context ( id bigint not null auto_increment, context_id varchar(255) not null, \
