DASH-144 DASH-130 Added label-key to the to the grouping-id so updated items can be distinguished from recently added items. Added "dash.updated" label key in cases where it was missing.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313067 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -4,7 +4,8 @@ announcement.attachments = Attachments: {0}
 announcement.news.time = Date posted: {0}
 announcement.user.name = Posted by: {0}
 announcement.info.link = View in Site
-announcement.grouped.title = {0} announcements added to {1}
+announcement.grouped.created = {0} announcements added to {1}
+announcement.grouped.updated = {0} announcements updated in {1}
 announcement.added = added
 
 assignment.data = Due: {due-time}. Accept until: {close-time}. {grade-type}.
@@ -25,7 +26,8 @@ assignment.max.grade = max ({0})
 assignment.submission.status = Status: {0}
 assignment.due.date = Due date
 assignment.close.date = Accept until 
-assignment.grouped.title = {0} assignments added to {1}
+assignment.grouped.created = {0} assignments added to {1}
+assignment.grouped.updated = {0} assignments updated in {1}
 assignment.added = added
 
 resource.user.name = Posted by: {0}
@@ -35,7 +37,8 @@ resource.info.link.text = View Text
 resource.info.link.html = View Page
 resource.info.link.url = Go to Site
 resource.info.link.citationlist = View Citation List
-resource.grouped.title = {0} resources added to {1}
+resource.grouped.created = {0} resources added to {1}
+resource.grouped.updated = {0} resources updated in {1}
 resource.added = added
 
 resource.metadata = Posted by {user-name} on {news-time}. 
@@ -116,6 +119,6 @@ dash.ajax.show.success = Item is no longer hidden
 dash.ajax.star.success = Item is now starred
 dash.ajax.unstar.success = Item is no longer starred
 
-updated = updated
+dash.updated = updated
 
 dash.attachment = Attachment
