--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -797,13 +797,13 @@ update.Config.propertyName = update dash_config set property_value=? where prope
 
 update.Context.title = update dash_context set context_title=? where context_id=?
 
-update.NewsItem.newsTime = update dash_news_item set news_time=? where id=?
+update.NewsItem.newsTime = update dash_news_item set news_time=?, grouping_id=? where id=?
 
-update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=? where id=?
+update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=?, grouping_id=? where id=?
 
-update.NewsItem.subtype = update dash_news_item set subtype=?,news_time=?,news_time_label_key=? where id=?
+update.NewsItem.subtype = update dash_news_item set subtype=?,news_time=?,news_time_label_key=?, grouping_id=? where id=?
 
-update.NewsItem.title = update dash_news_item set title=?,news_time=?,news_time_label_key=? where id=?
+update.NewsItem.title = update dash_news_item set title=?,news_time=?,news_time_label_key=?, grouping_id=? where id=?
 
 update.NewsLink = update dash_news_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
