--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -653,15 +653,15 @@ where usr.sakai_id=? and link.hidden=0 order by ni.news_time asc) \
 order by ni_news_time desc
 
 select.current.NewsLinks.by.sakaiUserId.contextId = (select 0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
-'' as ni_news_time_label_key, t5.g_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
+t5.label_key as ni_news_time_label_key, t5.g_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id, site.context_url as site_context_url, site.context_title as site_context_title, \
 t5.usr_id as p_id, t5.usr_sakai_id as p_sakai_id, t5.usr_user_id as p_user_id, \
 0 as link_id, 0 as link_hidden, 0 as link_sticky \
 from (select dp_id as usr_id, dp_sakai_id as usr_sakai_id, dp_user_id as usr_user_id, \
-t4.x as g_id,t4.y as g_count,date(t4.z) as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
+t4.x as g_id, t4.label_key as label_key,t4.y as g_count,date(t4.z) as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
 from (select dp.id as dp_id, dp.sakai_id as dp_sakai_id, dp.user_id as dp_user_id, dni.grouping_id as x,count(*) as y, \
-max(dni.news_time) as z, min(dnl.id) as nl_id, min(dni.entity_type) as type_id, min(dni.context_id) as site_id \
+max(dni.news_time) as z, min(dni.news_time_label_key) as label_key, min(dnl.id) as nl_id, min(dni.entity_type) as type_id, min(dni.context_id) as site_id \
 from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
 join dash_news_item dni on dni.id=dnl.item_id \
 join dash_context dc on dnl.context_id=dc.id \
@@ -807,13 +807,13 @@ update.Config.propertyName = update dash_config set property_value=? where prope
 
 update.Context.title = update dash_context set context_title=? where context_id=?
 
-update.NewsItem.newsTime = update dash_news_item set news_time=? where id=?
+update.NewsItem.newsTime = update dash_news_item set news_time=?, grouping_id=? where id=?
 
-update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=? where id=?
+update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=?, grouping_id=? where id=?
 
-update.NewsItem.subtype = update dash_news_item set subtype=?,news_time=?,news_time_label_key=?  where id=?
+update.NewsItem.subtype = update dash_news_item set subtype=?,news_time=?,news_time_label_key=?, grouping_id=?  where id=?
 
-update.NewsItem.title = update dash_news_item set title=?,news_time=?,news_time_label_key=? where id=?
+update.NewsItem.title = update dash_news_item set title=?,news_time=?,news_time_label_key=?, grouping_id=? where id=?
 
 update.NewsLink = update dash_news_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
