--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -607,15 +607,17 @@ join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id
 where link.id=? 
 
 select.current.NewsLinks.by.sakaiUserId = (select 0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
-'' as ni_news_time_label_key, t5.g_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
+t5.label_key as ni_news_time_label_key, t5.g_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id, site.context_url as site_context_url, site.context_title as site_context_title, \
 t5.usr_id as p_id, t5.usr_sakai_id as p_sakai_id, t5.usr_user_id as p_user_id, \
 0 as link_id, 0 as link_hidden, 0 as link_sticky \
-from (select dp_id as usr_id, dp_sakai_id as usr_sakai_id, dp_user_id as usr_user_id, t4.x as g_id,t4.y as g_count,date(t4.z) \
+from (select dp_id as usr_id, dp_sakai_id as usr_sakai_id, dp_user_id as usr_user_id, \
+t4.x as g_id, t4.label_key as label_key,t4.y as g_count,date(t4.z) \
 as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
 from (select dp.id as dp_id, dp.sakai_id as dp_sakai_id, dp.user_id as dp_user_id, \
-dni.grouping_id as x,count(*) as y,max(dni.news_time) as z, min(dnl.id) as nl_id, \
+dni.grouping_id as x,count(*) as y, \
+max(dni.news_time) as z, min(dni.news_time_label_key) as label_key, min(dnl.id) as nl_id, \
 min(dni.entity_type) as type_id, min(dni.context_id) as site_id \
 from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
 join dash_news_item dni on dni.id=dnl.item_id \
@@ -630,8 +632,8 @@ st.id as type_id, st.identifier as type_identifier, st.access_permission as type
 site.id as site_id, site.context_id as site_context_id, site.context_url as site_context_url, site.context_title as site_context_title, \
 usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id, \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
-from (select t4.gr_id as gr_id \
-from (select dni.grouping_id as gr_id, count(*) as gr_ct from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
+from (select t4.gr_id as gr_id from \
+(select dni.grouping_id as gr_id, count(*) as gr_ct from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
 join dash_news_item dni on dni.id=dnl.item_id where dp.sakai_id=? group by dni.grouping_id) t4 \
 where t4.gr_ct <= ?) t5 \
 join dash_news_item ni on t5.gr_id=ni.grouping_id \
@@ -639,19 +641,19 @@ join dash_news_link link on link.item_id=ni.id \
 join dash_person usr on usr.id=link.person_id \
 join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and link.hidden=0 order by ni.news_time asc) \
+where usr.sakai_id=? and link.hidden=0 order by ni.news_time desc ) \
 order by ni_news_time desc
 
 select.current.NewsLinks.by.sakaiUserId.contextId = (select 0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
-'' as ni_news_time_label_key, t5.g_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
+t5.label_key as ni_news_time_label_key, t5.g_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id, site.context_url as site_context_url, site.context_title as site_context_title, \
 t5.usr_id as p_id, t5.usr_sakai_id as p_sakai_id, t5.usr_user_id as p_user_id, \
 0 as link_id, 0 as link_hidden, 0 as link_sticky \
 from (select dp_id as usr_id, dp_sakai_id as usr_sakai_id, dp_user_id as usr_user_id, \
-t4.x as g_id,t4.y as g_count,date(t4.z) as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
+t4.x as g_id, t4.label_key as label_key,t4.y as g_count,date(t4.z) as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
 from (select dp.id as dp_id, dp.sakai_id as dp_sakai_id, dp.user_id as dp_user_id, dni.grouping_id as x,count(*) as y, \
-max(dni.news_time) as z, min(dnl.id) as nl_id, min(dni.entity_type) as type_id, min(dni.context_id) as site_id \
+max(dni.news_time) as z, min(dni.news_time_label_key) as label_key, min(dnl.id) as nl_id, min(dni.entity_type) as type_id, min(dni.context_id) as site_id \
 from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
 join dash_news_item dni on dni.id=dnl.item_id \
 join dash_context dc on dnl.context_id=dc.id \
@@ -674,7 +676,7 @@ join dash_news_link link on link.item_id=ni.id \
 join dash_person usr on usr.id=link.person_id \
 join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and site.context_id=? and link.hidden=0 order by ni.news_time asc) \
+where usr.sakai_id=? and site.context_id=? and link.hidden=0 order by ni.news_time desc) \
 order by ni_news_time desc
 
 select.starred.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
@@ -686,7 +688,7 @@ usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and link.sticky=1 order by ni.news_time asc
+where usr.sakai_id=? and link.sticky=1 order by ni.news_time desc
 
 select.starred.NewsLinks.by.sakaiUserId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
@@ -697,7 +699,7 @@ usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and site.context_id=? and link.sticky=1 order by ni.news_time asc
+where usr.sakai_id=? and site.context_id=? and link.sticky=1 order by ni.news_time desc
 
 select.hidden.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
@@ -708,7 +710,7 @@ usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and link.hidden=1 order by ni.news_time asc
+where usr.sakai_id=? and link.hidden=1 order by ni.news_time desc
 
 select.hidden.NewsLinks.by.sakaiUserId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, \
@@ -719,7 +721,7 @@ usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and site.context_id=? and link.hidden=1 order by ni.news_time asc
+where usr.sakai_id=? and site.context_id=? and link.hidden=1 order by ni.news_time desc
 
 select.Person.by.id = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where id=?
 
