DASH-137 Added ajax behavior to DashboardPage. Post an ajax request to update the item.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313072 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -119,6 +119,12 @@ dash.ajax.show.success = Item is no longer hidden
 dash.ajax.star.success = Item is now starred
 dash.ajax.unstar.success = Item is no longer starred
 
+dash.ajax.hide.failed = Update failed. Item is still showing.
+dash.ajax.show.failed = Update failed. Item is still hidden.
+dash.ajax.star.failed = Update failed. Item is not starred.
+dash.ajax.unstar.failed = Update failed. Item is still starred.
+dash.ajax.failed = Update failed. No changes made.
+
 dash.updated = updated
 
 dash.attachment = Attachment
