DASH-137 More work on being able to hide/show and star/unstar in a grouped list of items.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313073 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -522,17 +522,6 @@ join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type) \
 order by ni_news_time desc
 
-select.NewsItems.by.sakaiId.groupId.paged = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
-ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, ni.grouping_id as ni_group, 1 as ni_count, \
-st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
-site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title,nl.sticky as ni_sticky \
-from dash_person usr join dash_news_link nl on usr.id=nl.person_id \
-join dash_news_item ni on nl.item_id=ni.id \
-join dash_context site on site.id=ni.context_id \
-join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and ni.grouping_id=? \
-limit ? offset ?
-
 select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
@@ -605,6 +594,19 @@ link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
 from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where link.id=? 
+
+select.NewsLinks.by.sakaiId.groupId.paged = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, ni.grouping_id as ni_group, 1 as ni_count, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
+site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id, \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
+from dash_person usr join dash_news_link link on usr.id=link.person_id \
+join dash_news_item ni on link.item_id=ni.id \
+join dash_context site on site.id=ni.context_id \
+join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and ni.grouping_id=? \
+limit ? offset ?
 
 select.current.NewsLinks.by.sakaiUserId = (select 0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
 t5.label_key as ni_news_time_label_key, t5.g_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
