DASH-142 Change the place where grouped items appear in the list.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313074 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -615,7 +615,7 @@ site.id as site_id, site.context_id as site_context_id, site.context_url as site
 t5.usr_id as p_id, t5.usr_sakai_id as p_sakai_id, t5.usr_user_id as p_user_id, \
 0 as link_id, 0 as link_hidden, 0 as link_sticky \
 from (select dp_id as usr_id, dp_sakai_id as usr_sakai_id, dp_user_id as usr_user_id, \
-t4.x as g_id, t4.label_key as label_key,t4.y as g_count,date(t4.z) \
+t4.x as g_id, t4.label_key as label_key,t4.y as g_count,t4.z \
 as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
 from (select dp.id as dp_id, dp.sakai_id as dp_sakai_id, dp.user_id as dp_user_id, \
 dni.grouping_id as x,count(*) as y, \
@@ -653,7 +653,7 @@ site.id as site_id, site.context_id as site_context_id, site.context_url as site
 t5.usr_id as p_id, t5.usr_sakai_id as p_sakai_id, t5.usr_user_id as p_user_id, \
 0 as link_id, 0 as link_hidden, 0 as link_sticky \
 from (select dp_id as usr_id, dp_sakai_id as usr_sakai_id, dp_user_id as usr_user_id, \
-t4.x as g_id, t4.label_key as label_key,t4.y as g_count,date(t4.z) as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
+t4.x as g_id, t4.label_key as label_key,t4.y as g_count,t4.z as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
 from (select dp.id as dp_id, dp.sakai_id as dp_sakai_id, dp.user_id as dp_user_id, dni.grouping_id as x,count(*) as y, \
 max(dni.news_time) as z, min(dni.news_time_label_key) as label_key, min(dnl.id) as nl_id, min(dni.entity_type) as type_id, min(dni.context_id) as site_id \
 from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
