--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -509,7 +509,7 @@ union \
 '' as ni_news_time_label_key, ni.grouping_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title, 0 as ni_sticky \
-from (select t4.x as g_id,t4.y as g_count,date(t4.z) as g_time from (select dni.grouping_id as x,count(*) as y,max(dni.news_time) as z \
+from (select t4.x as g_id,t4.y as g_count,t4.z as g_time from (select dni.grouping_id as x,count(*) as y,max(dni.news_time) as z \
 from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id join dash_news_item dni on dni.id=dnl.item_id join dash_context dc on dnl.context_id=dc.id \
 where dp.sakai_id=? and dnl.hidden=0 group by grouping_id) t4 where t4.y > ?) t5 \
 join dash_news_item ni on ni.grouping_id=t5.g_id \
@@ -532,7 +532,7 @@ union \
 '' as ni_news_time_label_key, ni.grouping_id as ni_entity_ref, '' as ni_subtype, t5.g_id as ni_group, t5.g_count as ni_count, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title, 0 as ni_sticky \
-from (select t4.x as g_id,t4.y as g_count,date(t4.z) as g_time from (select dni.grouping_id as x,count(*) as y,max(dni.news_time) as z \
+from (select t4.x as g_id,t4.y as g_count,t4.z as g_time from (select dni.grouping_id as x,count(*) as y,max(dni.news_time) as z \
 from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id join dash_news_item dni on dni.id=dnl.item_id join dash_context dc on dnl.context_id=dc.id \
 where dp.sakai_id=? and dc.context_id=? and dnl.hidden=0 group by grouping_id) t4 where t4.y > ?) t5 \
 join dash_news_item ni on ni.grouping_id=t5.g_id \
@@ -636,7 +636,7 @@ site.id as site_id, site.context_id as site_context_id, site.context_url as site
 t5.usr_id as p_id, t5.usr_sakai_id as p_sakai_id, t5.usr_user_id as p_user_id, \
 0 as link_id, 0 as link_hidden, 0 as link_sticky \
 from (select dp_id as usr_id, dp_sakai_id as usr_sakai_id, dp_user_id as usr_user_id, \
-t4.x as g_id, t4.label_key as label_key, t4.y as g_count,date(t4.z) \
+t4.x as g_id, t4.label_key as label_key, t4.y as g_count,t4.z \
 as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
 from (select dp.id as dp_id, dp.sakai_id as dp_sakai_id, dp.user_id as dp_user_id, \
 dni.grouping_id as x,count(*) as y, \
@@ -674,7 +674,7 @@ site.id as site_id, site.context_id as site_context_id, site.context_url as site
 t5.usr_id as p_id, t5.usr_sakai_id as p_sakai_id, t5.usr_user_id as p_user_id, \
 0 as link_id, 0 as link_hidden, 0 as link_sticky \
 from (select dp_id as usr_id, dp_sakai_id as usr_sakai_id, dp_user_id as usr_user_id, \
-t4.x as g_id, t4.label_key as label_key,t4.y as g_count,date(t4.z) as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
+t4.x as g_id, t4.label_key as label_key,t4.y as g_count,t4.z as g_time, t4.nl_id as nl_id, t4.site_id as site_id, t4.type_id as entity_type \
 from (select dp.id as dp_id, dp.sakai_id as dp_sakai_id, dp.user_id as dp_user_id, dni.grouping_id as x,count(*) as y, \
 max(dni.news_time) as z, min(dni.news_time_label_key) as label_key, min(dnl.id) as nl_id, min(dni.entity_type) as type_id, min(dni.context_id) as site_id \
 from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
