DASH-124 oracle sql modified
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313076 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -645,7 +645,7 @@ min(dni.entity_type) as type_id, min(dni.context_id) as site_id \
 from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
 join dash_news_item dni on dni.id=dnl.item_id \
 join dash_context dc on dnl.context_id=dc.id \
-where dp.sakai_id=? and dnl.hidden=0 group by dp_id, dp_sakai_id, dp_user_id, grouping_id) t4 where t4.y > ?) t5 \
+where dp.sakai_id=? and dnl.hidden=0 group by dp.id, dp.sakai_id, dp.user_id, grouping_id) t4 where t4.y > ?) t5 \
 join dash_context site on t5.site_id=site.id \
 join dash_sourcetype st on st.id=t5.entity_type) \
 union \
@@ -664,7 +664,7 @@ join dash_news_link link on link.item_id=ni.id \
 join dash_person usr on usr.id=link.person_id \
 join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and link.hidden=0 order by ni.news_time desc) \
+where usr.sakai_id=? and link.hidden=0) \
 order by ni_news_time desc
 
 select.current.NewsLinks.by.sakaiUserId.contextId = (select 0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
@@ -681,8 +681,8 @@ from dash_person dp join dash_news_link dnl on dp.id=dnl.person_id \
 join dash_news_item dni on dni.id=dnl.item_id \
 join dash_context dc on dnl.context_id=dc.id \
 where dp.sakai_id=? and dc.context_id=? and dnl.hidden=0 \
-group by dp_id, dp_sakai_id, dp_user_id, grouping_id) t4 where t4.y > ?) t5 \
-join dash_context site on t5.site_id=site.id join dash_sourcetype st on st.id=t5.entity_type) \
+group by dp.id, dp.sakai_id, dp.user_id, grouping_id) t4 where t4.y > ?) t5 \
+join dash_context site on t5.site_id=site.id join dash_sourcetype st on st.id=t5.entity_type ) \
 union \
 (select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, ni.grouping_id as ni_group, 1 as ni_count, \
@@ -699,7 +699,7 @@ join dash_news_link link on link.item_id=ni.id \
 join dash_person usr on usr.id=link.person_id \
 join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and site.context_id=? and link.hidden=0 order by ni.news_time desc ) \
+where usr.sakai_id=? and site.context_id=? and link.hidden=0) \
 order by ni_news_time desc
 
 select.starred.NewsLinks.by.sakaiUserId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
