DASH-134 changed the label from 'updated' to 'revised'
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313077 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -5,7 +5,7 @@ announcement.news.time = Date posted: {0}
 announcement.user.name = Posted by: {0}
 announcement.info.link = View in Site
 announcement.grouped.created = {0} announcements added to {1}
-announcement.grouped.updated = {0} announcements updated in {1}
+announcement.grouped.updated = {0} announcements revised in {1}
 announcement.added = added
 
 assignment.data = Due: {due-time}. Accept until: {close-time}. {grade-type}.
@@ -27,7 +27,7 @@ assignment.submission.status = Status: {0}
 assignment.due.date = Due date
 assignment.close.date = Accept until 
 assignment.grouped.created = {0} assignments added to {1}
-assignment.grouped.updated = {0} assignments updated in {1}
+assignment.grouped.updated = {0} assignments revised in {1}
 assignment.added = added
 
 resource.user.name = Posted by: {0}
@@ -38,7 +38,7 @@ resource.info.link.html = View Page
 resource.info.link.url = Go to Site
 resource.info.link.citationlist = View Citation List
 resource.grouped.created = {0} resources added to {1}
-resource.grouped.updated = {0} resources updated in {1}
+resource.grouped.updated = {0} resources revised in {1}
 resource.added = added
 
 resource.metadata = Posted by {user-name} on {news-time}. 
@@ -125,6 +125,6 @@ dash.ajax.star.failed = Update failed. Item is not starred.
 dash.ajax.unstar.failed = Update failed. Item is still starred.
 dash.ajax.failed = Update failed. No changes made.
 
-dash.updated = updated
+dash.updated = revised
 
 dash.attachment = Attachment
