DASH-137 Added count query to sql for hsqldb and oracle. Added "newIcon" property to response when an item is starred or unstarred.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313081 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -595,6 +595,11 @@ from dash_news_link link join dash_person usr on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where link.id=? 
 
+count.NewsLinks.by.sakaiId.groupId = select count(*)  \
+from dash_person usr join dash_news_link link on usr.id=link.person_id \
+join dash_news_item ni on link.item_id=ni.id \
+where usr.sakai_id=? and ni.grouping_id=? and link.hidden=0
+
 select.NewsLinks.by.sakaiId.groupId.paged = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, ni.grouping_id as ni_group, 1 as ni_count, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
@@ -605,7 +610,7 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id \
 join dash_news_item ni on link.item_id=ni.id \
 join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and ni.grouping_id=? \
+where usr.sakai_id=? and ni.grouping_id=? and link.hidden=0 \
 limit ? offset ?
 
 select.current.NewsLinks.by.sakaiUserId = (select 0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
