DASH-116 Fix syntax for paged query in oracle
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313086 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -626,12 +626,12 @@ ni.news_time_label_key as ni_news_time_label_key, ni.entity_ref as ni_entity_ref
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title, \
 usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id, \
-link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, ROWNUM rn \
+link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky, ROWNUM as rn \
 from dash_person usr join dash_news_link link on usr.id=link.person_id \
 join dash_news_item ni on link.item_id=ni.id \
 join dash_context site on site.id=ni.context_id \
 join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and ni.grouping_id=? and link.hidden=0 and rn<?) \
+where usr.sakai_id=? and ni.grouping_id=? and link.hidden=0 and ROWNUM<?) \
 where rn>?
 
 select.current.NewsLinks.by.sakaiUserId = (select 0 as ni_id, t5.g_time as ni_news_time, '' as ni_title, \
