--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -66,6 +66,7 @@ schedule.key15 = Special event
 schedule.key16 = Web Assignment  
 schedule.grouped.title = {0} events added to the {1} calendar
 
+dash.calendar.title			= Assignments & Events
 dash.calendar.upcoming		= Upcoming
 dash.calendar.past 			= Past
 dash.calendar.starred		= Starred
@@ -81,7 +82,8 @@ dash.calendar.linksCount1		= Showing 1 item
 dash.calendar.linksCount2		= Showing item {0} of {1} items
 dash.calendar.linksCount3		= Showing {0} to {1} of {2} items
 
-dash.news.current			= Current Stuff
+dash.news.title				= Recent Activity
+dash.news.current			= Updates
 dash.news.starred			= Starred
 dash.news.hidden			= Hidden
 
