DASH-136 Also fix the title for the MOTD.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313099 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -82,6 +82,8 @@ dash.calendar.linksCount1		= Showing 1 item
 dash.calendar.linksCount2		= Showing item {0} of {1} items
 dash.calendar.linksCount3		= Showing {0} to {1} of {2} items
 
+dash.motd.title 				= Message of the day
+
 dash.news.title				= Recent Activity
 dash.news.current			= Updates
 dash.news.starred			= Starred
