DASH-154 Added special classes to deal with dropbox items.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313102 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -43,6 +43,10 @@ resource.added = added
 
 resource.metadata = Posted by {user-name} on {news-time}. 
 
+dropbox.add = added to Drop Box
+dropbox.grouped.created = {0} resources added to {1} Drop Box
+dropbox.grouped.updated = {0} resources revised in {1} Drop Box
+
 
 schedule.info.link = View in Site
 schedule.news.time = Date posted: {0}
