DASH-154 Added special labels for dropbox items.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313105 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -40,10 +40,12 @@ resource.info.link.citationlist = View Citation List
 resource.grouped.created = {0} resources added to {1}
 resource.grouped.updated = {0} resources revised in {1}
 resource.added = added
+resource.updated = revised
 
 resource.metadata = Posted by {user-name} on {news-time}. 
 
-dropbox.add = added to Drop Box
+dropbox.added = added to Drop Box
+dropbox.updated = revised in Drop Box
 dropbox.grouped.created = {0} resources added to {1} Drop Box
 dropbox.grouped.updated = {0} resources revised in {1} Drop Box
 
