--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -111,6 +111,7 @@ dash.hide	= Hide this
 dash.show	= Show this
 
 dash.grouped.title = {0} items of type {1} added to the {2} site
+dash.grouped.more = Show more ...
 
 
 dash.date.minute.ago = 1 minute ago
