DASH-157 Added labels to bundles for the more-link and the more-status.  Send labels to browser.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313111 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -111,8 +111,8 @@ dash.hide	= Hide this
 dash.show	= Show this
 
 dash.grouped.title = {0} items of type {1} added to the {2} site
-dash.grouped.more = Show more ...
-
+dash.grouped.more.status =  Showing {0} of {1} items
+dash.grouped.more.link = Show more...
 
 dash.date.minute.ago = 1 minute ago
 dash.date.minutes.ago = {0} minutes ago
