--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -88,6 +88,8 @@ dash.calendar.linksCount1		= Showing 1 item
 dash.calendar.linksCount2		= Showing item {0} of {1} items
 dash.calendar.linksCount3		= Showing {0} to {1} of {2} items
 
+dash.pager.range				= {0}-{1}
+
 dash.motd.title 				= Message of the day
 
 dash.news.title				= Recent Activity
