DASH-164 Correcting oracle syntax for query "select.NewsItems.by.contextId".
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313118 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -491,7 +491,7 @@ select.NewsItems.by.contextId = select ni.id as ni_id, ni.news_time as ni_news_t
 ni.entity_ref as ni_entity_ref, ni.subtype as ni_subtype, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
-from dash_news_item ni join dash_context sisite.id=ci.=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
+from dash_news_item ni join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type  \
 where site.context_id=? 
 
 select.NewsItems.sakaiId.collapseCount = (select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
