DASH-155 Added generic error message to language bundle. Java code passes error message from bundle to html page.  Page includes error message.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313121 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -141,3 +141,5 @@ dash.ajax.failed = Update failed. No changes made.
 dash.updated = revised
 
 dash.attachment = Attachment
+
+dash.generic.error = You may have logged out or the item is no longer available.
