DASH-153 Fixing oracle syntax for CURRENT_TIMESTAMP
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313126 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -269,7 +269,7 @@ join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? and site.context_id=? and site.id not in (select pc.context_id from dash_person_context pc where pc.person_id=usr.id and pc.item_type=0) \
 and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where ps.person_id=usr.id and ps.item_type=0) \
 and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type=0) \
-and link.hidden=0 and ci.calendar_time > now() order by ci.calendar_time asc
+and link.hidden=0 and ci.calendar_time > CURRENT_TIMESTAMP order by ci.calendar_time asc
 
 select.CalendarItems.by.sakaiId.contextId.hidden = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
@@ -294,7 +294,7 @@ join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? and site.context_id=? and site.id not in (select pc.context_id from dash_person_context pc where pc.person_id=usr.id and pc.item_type=0) \
 and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where ps.person_id=usr.id and ps.item_type=0) \
 and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type=0) \
-and link.hidden=0 and ci.calendar_time < now() order by ci.calendar_time desc
+and link.hidden=0 and ci.calendar_time < CURRENT_TIMESTAMP order by ci.calendar_time desc
 
 select.CalendarItems.by.sakaiId.contextId.sticky = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
@@ -319,7 +319,7 @@ join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? and site.id not in (select pc.context_id from dash_person_context pc where pc.person_id=usr.id and pc.item_type=0) \
 and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where ps.person_id=usr.id and ps.item_type=0) \
 and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type=0) \
-and link.hidden=0 and ci.calendar_time > now()  order by ci.calendar_time asc
+and link.hidden=0 and ci.calendar_time > CURRENT_TIMESTAMP order by ci.calendar_time asc
 
 select.CalendarItems.by.sakaiId.hidden = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
@@ -344,7 +344,7 @@ join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? and site.id not in (select pc.context_id from dash_person_context pc where pc.person_id=usr.id and pc.item_type=0) \
 and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where ps.person_id=usr.id and ps.item_type=0) \
 and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type=0) \
-and link.hidden=0 and ci.calendar_time < now()  order by ci.calendar_time desc
+and link.hidden=0 and ci.calendar_time < CURRENT_TIMESTAMP order by ci.calendar_time desc
 
 select.CalendarItems.by.sakaiId.sticky = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
