--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -790,6 +790,8 @@ from dash_sourcetype st where identifier=?
 
 update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
 
+update.CalendarItem.calendarTime.entityReference.labelKey.sequenceNumber = update dash_calendar_item set calendar_time=? where entity_ref=? and calendar_time_label_key=? and sequence_num=?
+
 update.CalendarItem.subtype = update dash_calendar_item set subtype=? where id=?
 
 update.CalendarItem.title = update dash_calendar_item set title=? where id=?
