--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -809,6 +809,8 @@ select.SourceType.by.identifier = select st.id as type_id, st.identifier as type
 
 update.CalendarItem.calendarTime = update dash_calendar_item set calendar_time=? where id=?
 
+update.CalendarItem.calendarTime.entityReference.labelKey.sequenceNumber = update dash_calendar_item set calendar_time=? where entity_ref=? and calendar_time_label_key=? and sequence_num=?
+
 update.CalendarItem.subtype = update dash_calendar_item set subtype=? where id=?
 
 update.CalendarItem.title = update dash_calendar_item set title=? where id=?
