DASH-111 DASH-112 Partial fix.  Start of the impl for handling changes in frequency of repeating events.  Need to make sure it doesn't make changes in some cases.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313129 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -346,6 +346,8 @@ from dash_person usr join dash_calendar_link link on usr.id=link.person_id join 
 join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
 where link.sticky=1 and usr.sakai_id=? order by ci.calendar_time asc
 
+select.MaxSequenceNumber.entityReference.calendarTimeLabelKey = select max(sequence_num) from dash_calendar_item where entity_ref=? and calendar_time_label_key=?
+
 select.CalendarLink.by.calendarItemId.personId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
 ci.subtype as ci_subtype, ci.sequence_num as ci_sequence_num, \
@@ -827,6 +829,8 @@ update.NewsItem.subtype = update dash_news_item set subtype=?,news_time=?,news_t
 update.NewsItem.title = update dash_news_item set title=?,news_time=?,news_time_label_key=?, grouping_id=? where id=?
 
 update.NewsLink = update dash_news_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
+
+update.RepeatingEventsFrequency.entityReference = update dash_repeating_event set frequency=? where entity_ref=?
 
 update.RepeatingEventsLabelKey.entityReference.oldLabelKey = update dash_repeating_event set calendar_time_label_key=? where entity_ref=? and calendar_time_label_key=?
 
