--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -341,6 +341,8 @@ where link.sticky=1 and usr.sakai_id=? order by ci.calendar_time asc
 
 select.MaxSequenceNumber.entityReference.calendarTimeLabelKey = select max(sequence_num) from dash_calendar_item where entity_ref=? and calendar_time_label_key=?
 
+select.SequenceNumbers.entityReference.calendarTimeLabelKey.sequenceNumber = select sequence_num from dash_calendar_item where entity_ref=? and calendar_time_label_key=? and sequence_num>=?
+
 select.CalendarLink.by.calendarItemId.personId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, \
 ci.subtype as ci_subtype,  ci.sequence_num as ci_sequence_num, \
